--- a/scripts/ML_tyre_pred/N00_model_lap_prediction.ipynb
+++ b/scripts/ML_tyre_pred/N00_model_lap_prediction.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 130,
    "id": "123d77f5",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 131,
    "id": "747f4c33",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
     "    \"\"\"\n",
     "    if model_path is None:\n",
     "        # Default path\n",
-    "        model_path = \"../../outputs/week3/best_xgb_model.pkl\"\n",
+    "        model_path = \"../../outputs/week3/xgb_sequential_model.pkl\"\n",
     "    \n",
     "    try:\n",
     "        with open(model_path, 'rb') as f:\n",
@@ -88,7 +88,9 @@
     "        # Extract feature names\n",
     "        feature_names = model.feature_names_in_\n",
     "        print(f\"Model loaded successfully with {len(feature_names)} features\")\n",
+    "        \n",
     "        return model, feature_names\n",
+    "        \n",
     "    except Exception as e:\n",
     "        print(f\"Error loading model: {str(e)}\")\n",
     "        return None, None"
@@ -112,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 132,
    "id": "f2b819ed",
    "metadata": {},
    "outputs": [],
@@ -193,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 133,
    "id": "aa278353",
    "metadata": {},
    "outputs": [],
@@ -293,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 134,
    "id": "1e187357",
    "metadata": {},
    "outputs": [],
@@ -354,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 135,
    "id": "4fa6d629",
    "metadata": {},
    "outputs": [],
@@ -453,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 136,
    "id": "5de11b30",
    "metadata": {},
    "outputs": [],
@@ -526,14 +528,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model loaded successfully with 13 features\n",
+      "Model loaded successfully with 25 features\n",
       "Using provided DataFrame: 1180 rows, 15 columns\n",
       "Adding LapNumber column based on sequence\n",
       "Skipping driver 1, stint 3.0: not enough laps\n",
       "Created sequential features: 12 new columns\n",
-      "Removing extra columns: {'SpeedFL_Delta', 'LapNumber', 'Prev_SpeedI2', 'SpeedI2_Delta', 'SpeedST_Delta', 'Prev_TyreAge', 'SpeedI1_Delta', 'LapTime_Delta', 'Prev_LapTime', 'Prev_SpeedI1', 'Unnamed: 0', 'Prev_SpeedST', 'Prev_SpeedFL', 'LapTime_Trend'}\n",
+      "Removing extra columns: {'LapNumber', 'Unnamed: 0'}\n",
       "Making predictions...\n",
-      "Prediction performance - RMSE: 1.708s, MAE: 1.486s\n",
+      "Prediction performance - RMSE: 0.081s, MAE: 0.049s\n",
       "Predictions complete: 1179 rows\n"
      ]
     },
@@ -546,566 +548,17 @@
       "C:\\Users\\victo\\AppData\\Local\\Temp\\ipykernel_23416\\3122830133.py:69: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  result_df['IsNextLapPrediction'] = result_df['IsNextLapPrediction'].fillna(False)\n"
      ]
-    },
-    {
-     "data": {
-      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
-       "columns": [
-        {
-         "name": "index",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "Unnamed: 0",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "LapTime",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "Stint",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "SpeedI1",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "SpeedI2",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "SpeedFL",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "SpeedST",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "Position",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "LapsSincePitStop",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "DRSUsed",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "TeamID",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "CompoundID",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "TyreAge",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "FuelLoad",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "DriverNumber",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "LapNumber",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "Prev_LapTime",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "Prev_SpeedI1",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "Prev_SpeedI2",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "Prev_SpeedFL",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "Prev_SpeedST",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "Prev_TyreAge",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "LapTime_Delta",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "SpeedI1_Delta",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "SpeedI2_Delta",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "SpeedFL_Delta",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "SpeedST_Delta",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "LapTime_Trend",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "PredictedLapTime",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "PredictionError",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "IsNextLapPrediction",
-         "rawType": "bool",
-         "type": "boolean"
-        }
-       ],
-       "conversionMethod": "pd.DataFrame",
-       "ref": "a4742808-13f2-4dd8-9c4b-18d6da5a7e0d",
-       "rows": [
-        [
-         "0",
-         "1.0",
-         "80.402",
-         "1.0",
-         "252.0",
-         "257.0",
-         "276.0",
-         "295.0",
-         "1.0",
-         "2.0",
-         "0.0",
-         "9.0",
-         "2.0",
-         "2.0",
-         "0.9697",
-         "1.0",
-         "2.0",
-         "83.935",
-         "256.0",
-         "261.0",
-         "276.0",
-         "275.0",
-         "1.0",
-         "-3.5330000000000013",
-         "-4.0",
-         "-4.0",
-         "0.0",
-         "20.0",
-         "0.0",
-         "81.42981719970703",
-         "1.0278171997070302",
-         "False"
-        ],
-        [
-         "1",
-         "2.0",
-         "80.499",
-         "1.0",
-         "249.0",
-         "256.0",
-         "276.0",
-         "297.0",
-         "1.0",
-         "3.0",
-         "0.0",
-         "9.0",
-         "2.0",
-         "3.0",
-         "0.9545",
-         "1.0",
-         "3.0",
-         "80.402",
-         "252.0",
-         "257.0",
-         "276.0",
-         "295.0",
-         "2.0",
-         "0.0969999999999942",
-         "-3.0",
-         "-1.0",
-         "0.0",
-         "2.0",
-         "3.6299999999999955",
-         "81.75697326660156",
-         "1.2579732666015673",
-         "False"
-        ],
-        [
-         "2",
-         "3.0",
-         "80.346",
-         "1.0",
-         "255.0",
-         "256.0",
-         "276.0",
-         "300.0",
-         "1.0",
-         "4.0",
-         "0.0",
-         "9.0",
-         "2.0",
-         "4.0",
-         "0.9394",
-         "1.0",
-         "4.0",
-         "80.499",
-         "249.0",
-         "256.0",
-         "276.0",
-         "297.0",
-         "3.0",
-         "-0.1529999999999916",
-         "6.0",
-         "0.0",
-         "0.0",
-         "3.0",
-         "-0.2499999999999858",
-         "81.75697326660156",
-         "1.4109732666015589",
-         "False"
-        ],
-        [
-         "3",
-         "4.0",
-         "80.283",
-         "1.0",
-         "254.0",
-         "256.0",
-         "277.0",
-         "301.0",
-         "1.0",
-         "5.0",
-         "0.0",
-         "9.0",
-         "2.0",
-         "5.0",
-         "0.9242",
-         "1.0",
-         "5.0",
-         "80.346",
-         "255.0",
-         "256.0",
-         "276.0",
-         "300.0",
-         "4.0",
-         "-0.06300000000000239",
-         "-1.0",
-         "0.0",
-         "1.0",
-         "1.0",
-         "0.0899999999999892",
-         "81.75697326660156",
-         "1.4739732666015612",
-         "False"
-        ],
-        [
-         "4",
-         "5.0",
-         "80.402",
-         "1.0",
-         "255.0",
-         "253.0",
-         "276.0",
-         "309.85",
-         "1.0",
-         "6.0",
-         "0.0",
-         "9.0",
-         "2.0",
-         "6.0",
-         "0.9091",
-         "1.0",
-         "6.0",
-         "80.283",
-         "254.0",
-         "256.0",
-         "277.0",
-         "301.0",
-         "5.0",
-         "0.11899999999999977",
-         "1.0",
-         "-3.0",
-         "-1.0",
-         "8.850000000000023",
-         "0.18200000000000216",
-         "81.75697326660156",
-         "1.3549732666015615",
-         "False"
-        ]
-       ],
-       "shape": {
-        "columns": 31,
-        "rows": 5
-       }
-      },
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>LapTime</th>\n",
-       "      <th>Stint</th>\n",
-       "      <th>SpeedI1</th>\n",
-       "      <th>SpeedI2</th>\n",
-       "      <th>SpeedFL</th>\n",
-       "      <th>SpeedST</th>\n",
-       "      <th>Position</th>\n",
-       "      <th>LapsSincePitStop</th>\n",
-       "      <th>DRSUsed</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Prev_TyreAge</th>\n",
-       "      <th>LapTime_Delta</th>\n",
-       "      <th>SpeedI1_Delta</th>\n",
-       "      <th>SpeedI2_Delta</th>\n",
-       "      <th>SpeedFL_Delta</th>\n",
-       "      <th>SpeedST_Delta</th>\n",
-       "      <th>LapTime_Trend</th>\n",
-       "      <th>PredictedLapTime</th>\n",
-       "      <th>PredictionError</th>\n",
-       "      <th>IsNextLapPrediction</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>80.402</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>252.0</td>\n",
-       "      <td>257.0</td>\n",
-       "      <td>276.0</td>\n",
-       "      <td>295.00</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-3.533</td>\n",
-       "      <td>-4.0</td>\n",
-       "      <td>-4.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>20.00</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>81.429817</td>\n",
-       "      <td>1.027817</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2.0</td>\n",
-       "      <td>80.499</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>249.0</td>\n",
-       "      <td>256.0</td>\n",
-       "      <td>276.0</td>\n",
-       "      <td>297.00</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.097</td>\n",
-       "      <td>-3.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.00</td>\n",
-       "      <td>3.630</td>\n",
-       "      <td>81.756973</td>\n",
-       "      <td>1.257973</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3.0</td>\n",
-       "      <td>80.346</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>255.0</td>\n",
-       "      <td>256.0</td>\n",
-       "      <td>276.0</td>\n",
-       "      <td>300.00</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>-0.153</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>3.00</td>\n",
-       "      <td>-0.250</td>\n",
-       "      <td>81.756973</td>\n",
-       "      <td>1.410973</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4.0</td>\n",
-       "      <td>80.283</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>254.0</td>\n",
-       "      <td>256.0</td>\n",
-       "      <td>277.0</td>\n",
-       "      <td>301.00</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>-0.063</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>0.090</td>\n",
-       "      <td>81.756973</td>\n",
-       "      <td>1.473973</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5.0</td>\n",
-       "      <td>80.402</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>255.0</td>\n",
-       "      <td>253.0</td>\n",
-       "      <td>276.0</td>\n",
-       "      <td>309.85</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>0.119</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-3.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>8.85</td>\n",
-       "      <td>0.182</td>\n",
-       "      <td>81.756973</td>\n",
-       "      <td>1.354973</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 31 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Unnamed: 0  LapTime  Stint  SpeedI1  SpeedI2  SpeedFL  SpeedST  Position  \\\n",
-       "0         1.0   80.402    1.0    252.0    257.0    276.0   295.00       1.0   \n",
-       "1         2.0   80.499    1.0    249.0    256.0    276.0   297.00       1.0   \n",
-       "2         3.0   80.346    1.0    255.0    256.0    276.0   300.00       1.0   \n",
-       "3         4.0   80.283    1.0    254.0    256.0    277.0   301.00       1.0   \n",
-       "4         5.0   80.402    1.0    255.0    253.0    276.0   309.85       1.0   \n",
-       "\n",
-       "   LapsSincePitStop  DRSUsed  ...  Prev_TyreAge  LapTime_Delta  SpeedI1_Delta  \\\n",
-       "0               2.0      0.0  ...           1.0         -3.533           -4.0   \n",
-       "1               3.0      0.0  ...           2.0          0.097           -3.0   \n",
-       "2               4.0      0.0  ...           3.0         -0.153            6.0   \n",
-       "3               5.0      0.0  ...           4.0         -0.063           -1.0   \n",
-       "4               6.0      0.0  ...           5.0          0.119            1.0   \n",
-       "\n",
-       "   SpeedI2_Delta  SpeedFL_Delta  SpeedST_Delta  LapTime_Trend  \\\n",
-       "0           -4.0            0.0          20.00          0.000   \n",
-       "1           -1.0            0.0           2.00          3.630   \n",
-       "2            0.0            0.0           3.00         -0.250   \n",
-       "3            0.0            1.0           1.00          0.090   \n",
-       "4           -3.0           -1.0           8.85          0.182   \n",
-       "\n",
-       "   PredictedLapTime  PredictionError  IsNextLapPrediction  \n",
-       "0         81.429817         1.027817                False  \n",
-       "1         81.756973         1.257973                False  \n",
-       "2         81.756973         1.410973                False  \n",
-       "3         81.756973         1.473973                False  \n",
-       "4         81.756973         1.354973                False  \n",
-       "\n",
-       "[5 rows x 31 columns]"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "# telemetry_data = pd.read_csv('../../outputs/week3/lap_prediction_data.csv.')\n",
-    "\n",
     "# predictions_df = predict_lap_times(telemetry_data)\n",
-    "# predictions_df.head()"
+    "# # predictions_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 138,
    "id": "c9e160aa",
    "metadata": {},
    "outputs": [],
