fixed importations, elimitaned all until section 3

--- a/scripts/IS_agent/N02_degradation_time_rules.ipynb
+++ b/scripts/IS_agent/N02_degradation_time_rules.ipynb
@@ -58,21 +58,26 @@
     "from datetime import datetime\n",
     "import os\n",
     "import sys\n",
-    "\n",
+    "sys.path.append(os.path.abspath('../'))  \n",
+    "from ML_tyre_pred.ML_utils import N02_model_tire_predictions as tdp\n",
     "\n",
     "# Import Experta components\n",
     "from experta import Rule, NOT, OR, AND, AS, MATCH, TEST, EXISTS\n",
     "from experta import DefFacts, Fact, Field, KnowledgeEngine\n",
     "\n",
     "\n",
+    "\n",
     "####################### Import Custom Fact Classes ###################\n",
+    "import utils.N01_agent_setup as agent_setup\n",
     "from utils.N01_agent_setup import (\n",
     "    TelemetryFact,\n",
     "    DegradationFact,\n",
     "    RaceStatusFact,\n",
     "    StrategyRecommendation,\n",
     "    F1StrategyEngine,\n",
-    "    transform_degradation_prediction\n",
+    "    transform_tire_predictions,\n",
+    "    get_current_degradation,\n",
+    "    load_tire_predictions\n",
     ")\n",
     " \n",
     "# Configuring plots \n",
@@ -301,7 +306,7 @@
     "for lap in stint_changes:\n",
     "    plt.axvline(x=lap, color='k', linestyle='--', label='Pit Stop' if 'Pit Stop' not in plt.gca().get_legend_handles_labels()[1] else \"\")\n",
     "\n",
-    "# Establecer límites del eje Y - esto cortará valores por debajo de -1\n",
+    "# Stablish Y axis limits for not putting anything below -1 in the graphic. Important for seeing the real scale\n",
     "plt.ylim(bottom=-1)\n",
     "\n",
     "plt.xlabel('Race Lap')\n",
@@ -328,129 +333,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Update the DegradationFact class to include predicted_rates\n",
-    "from experta import Fact, Field, KnowledgeEngine, Rule, NOT, OR, AND, AS, MATCH, TEST, EXISTS\n",
-    "\n",
-    "class DegradationFact(Fact):\n",
-    "    \"\"\"\n",
-    "    Facts about tire degradation including predictions\n",
-    "    \"\"\"\n",
-    "    degradation_rate = Field(float, mandatory=False)           # Seconds lost per lap due to degradation\n",
-    "    previous_rates = Field(list, mandatory=False)              # Last N degradation rates for trend analysis\n",
-    "    fuel_adjusted_deg_percent = Field(float, mandatory=False)  # Percentage degradation adjusted for fuel\n",
-    "    predicted_rates = Field(list, mandatory=False)             # Predicted future degradation rates\n",
-    "\n",
-    "# Define the F1DegradationRules engine class that inherits from F1StrategyEngine\n",
-    "class F1DegradationRules(F1StrategyEngine):\n",
-    "    \"\"\"\n",
-    "    Engine implementing tire degradation related rules for F1 strategy.\n",
-    "    Inherits the base functionality from F1StrategyEngine.\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    @Rule(\n",
-    "        DegradationFact(degradation_rate=TEST(lambda x: x > 0.15)),\n",
-    "        TelemetryFact(tire_age=TEST(lambda x: x > 10)),\n",
-    "        RaceStatusFact(lap=MATCH.lap)\n",
-    "    )\n",
-    "    def high_degradation_pit_stop(self, lap):\n",
-    "        \"\"\"\n",
-    "        Rule 1: High Degradation Rate Pit Stop\n",
-    "        IF (DegradationRate > 0.15 AND TyreAge > 10)\n",
-    "        THEN recommend priority pit stop\n",
-    "        CONFIDENCE: 0.85\n",
-    "        \"\"\"\n",
-    "        self.declare(\n",
-    "            StrategyRecommendation(\n",
-    "                action=\"pit_stop\",\n",
-    "                confidence=0.85,\n",
-    "                explanation=\"High tire degradation rate detected above critical threshold with significant tire age\",\n",
-    "                priority=2,  # Higher priority due to performance implications\n",
-    "                lap_issued=lap\n",
-    "            )\n",
-    "        )\n",
-    "        self.record_rule_fired(\"high_degradation_pit_stop\")\n",
-    "    \n",
-    "    @Rule(\n",
-    "        DegradationFact(degradation_rate=TEST(lambda x: x < 0.08)),\n",
-    "        TelemetryFact(tire_age=TEST(lambda x: x > 12)),\n",
-    "        TelemetryFact(position=TEST(lambda x: x < 5)),\n",
-    "        RaceStatusFact(lap=MATCH.lap)\n",
-    "    )\n",
-    "    def stint_extension_recommendation(self, lap):\n",
-    "        \"\"\"\n",
-    "        Rule 2: Stint Extension for Low Degradation\n",
-    "        IF (DegradationRate < 0.08 AND TyreAge > 12 AND Position < 5)\n",
-    "        THEN recommend extending current stint\n",
-    "        CONFIDENCE: 0.75\n",
-    "        \"\"\"\n",
-    "        self.declare(\n",
-    "            StrategyRecommendation(\n",
-    "                action=\"extend_stint\",\n",
-    "                confidence=0.75,\n",
-    "                explanation=\"Low tire degradation despite tire age. Recommend extending the current stint to maximize strategic advantage.\",\n",
-    "                priority=1,\n",
-    "                lap_issued=lap\n",
-    "            )\n",
-    "        )\n",
-    "        self.record_rule_fired(\"stint_extension_recommendation\")\n",
-    "    \n",
-    "    @Rule(\n",
-    "        DegradationFact(previous_rates=MATCH.rates),\n",
-    "        TEST(lambda rates: rates is not None and isinstance(rates, list) and \n",
-    "             len(rates) >= 3 and (rates[-1] - rates[-3]) > 0.03),\n",
-    "        RaceStatusFact(lap=MATCH.lap)\n",
-    "    )\n",
-    "    def early_degradation_warning(self, rates, lap):\n",
-    "        \"\"\"\n",
-    "        Rule 3: Early Degradation Warning\n",
-    "        IF (DegradationRate increases by more than 0.03 in 3 consecutive laps)\n",
-    "        THEN recommend pit stop preparation\n",
-    "        CONFIDENCE: 0.7\n",
-    "        \"\"\"\n",
-    "        self.declare(\n",
-    "            StrategyRecommendation(\n",
-    "                action=\"prepare_pit\",\n",
-    "                confidence=0.7,\n",
-    "                explanation=f\"Degradation rate increasing rapidly over the last 3 laps (trend: {rates[-3]:.3f} → {rates[-1]:.3f}). Prepare for potential pit stop.\",\n",
-    "                priority=1,\n",
-    "                lap_issued=lap\n",
-    "            )\n",
-    "        )\n",
-    "        self.record_rule_fired(\"early_degradation_warning\")\n",
-    "        \n",
-    "    # Rule based on model predictions\n",
-    "    @Rule(\n",
-    "        DegradationFact(predicted_rates=MATCH.pred_rates),\n",
-    "        TEST(lambda pred_rates: pred_rates is not None and isinstance(pred_rates, list) and \n",
-    "             len(pred_rates) > 0 and pred_rates[0] > 0.2),\n",
-    "        TelemetryFact(tire_age=TEST(lambda x: x > 8)),\n",
-    "        RaceStatusFact(lap=MATCH.lap)\n",
-    "    )\n",
-    "    def predicted_high_degradation_alert(self, pred_rates, lap):\n",
-    "        \"\"\"\n",
-    "        Rule 4: Predicted High Degradation Alert\n",
-    "        IF (Predicted future degradation rate > 0.2 AND TyreAge > 8)\n",
-    "        THEN recommend considering pit stop based on model prediction\n",
-    "        CONFIDENCE: 0.8\n",
-    "        \"\"\"\n",
-    "        self.declare(\n",
-    "            StrategyRecommendation(\n",
-    "                action=\"consider_pit\",\n",
-    "                confidence=0.8,\n",
-    "                explanation=f\"Model predicts critical degradation in upcoming laps (predicted rate: {pred_rates[0]:.3f}s/lap). Consider pit stop strategy.\",\n",
-    "                priority=2,\n",
-    "                lap_issued=lap\n",
-    "            )\n",
-    "        )\n",
-    "        self.record_rule_fired(\"predicted_high_degradation_alert\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -462,32 +344,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import sys\n",
-    "import os\n",
-    "sys.path.append(os.path.abspath('../'))  \n",
-    "from ML_tyre_pred.ML_utils import N02_model_tire_predictions as tdp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load data\n",
-    "race_data = pd.read_csv('../../outputs/week3/lap_prediction_data.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Predictions from the models\n",
-    "predictions = tdp.predict_tire_degradation(race_data, '../../outputs/week5/models/')"
-   ]
+   "source": []
   }
  ],
  "metadata": {
