--- a/scripts/IS_agent/N01_agent_setup.ipynb
+++ b/scripts/IS_agent/N01_agent_setup.ipynb
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,6 +552,8 @@
     "    # Get basic info about current state\n",
     "    current_info = future_data.iloc[0]\n",
     "    \n",
+    "\n",
+    "    ################### POSSIBLE ERROR THAT DOES NOT ACTIVATE CURRECTLY THE RULE ENGINE \n",
     "    # Create degradation fact with current and predicted data\n",
     "    degradation_fact = DegradationFact(\n",
     "        # Get current degradation - not directly available in predictions\n",
@@ -559,7 +561,11 @@
     "        degradation_rate=0.0,  \n",
     "        predicted_rates=predicted_rates  # Array of future predictions\n",
     "    )\n",
-    "    \n",
+    "    ########################################################3\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "    # Create corresponding telemetry fact\n",
     "    telemetry_fact = TelemetryFact(\n",
     "        tire_age=int(latest_age),\n",
@@ -581,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,10 +629,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "######################### SEE IF THIS FUNCTION CAN FIX THE ERROR MENTIONED IN THE FACTS\n",
+    "### PLACE OF THE ERROR: LINE 39, CELL 4.1\n",
+    "# degradation_fact = DegradationFact(\n",
+    "#         # Get current degradation - not directly available in predictions\n",
+    "#         # Using a placeholder value (could be obtained from elsewhere)\n",
+    "#         degradation_rate=0.0,  \n",
+    "#         predicted_rates=predicted_rates  # Array of future predictions\n",
+    "#     )\n",
+    "\n",
+    "\n",
     "def get_current_degradation(telemetry_data, driver_number):\n",
     "    \"\"\"\n",
     "    Extract current degradation rate from telemetry data.\n",
@@ -667,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -798,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -845,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -887,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -918,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -946,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -992,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1037,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1094,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
